# Nimble

./: .gitignore  AbstractFactory.h  Bitset.h  CMakeLists.txt  Classes.h  Composition.h  Config.h  EventEmitter.h  Exception.h  FlagSet.h  Foo.h  Format.h  Globals.h  Guid.h  Hash.h  Image.h  KeyValue.h  LocalTime.h  Logger.h  Makefile.py  Namespace.h  Nimble.h  Preprocessor.h  README.md  RectanglePacker.h  StringHash.h  Templates.h  Types.h  UserData.h  Utils.h  Variant.h  configure-win32.bat
Allocators/: ArrayAllocator.h  IndexAllocator.h  LinearAllocator.h
Bv/: Bounds.h  Frustum.h
Color/: Rgb.h  Rgba.h
Containers/: BidHashMap.h  BidMap.h  FixedArray.h  IndexCache.h  IndexManager.h  Pool.h  Slots.h  StringList.h  VariantArray.h
Debug/: Breadcrumb.h  Logger.h
Hashing/: Base64.h
Math/: Curve.h  FixedPointNumber.h  Graph.h  LinearRegression.h  Matrix.h  Matrix4.h  Mesh.h  Plane.h  Quat.h  Random.h  Ray.h  Samples.h  Vec2.h  Vec3.h  Vec4.h  Vector.h
Parser/: DFA.h  ExpressionParser.h  ExpressionTokenizer.h  Token.h  Tokenizer.h
Patterns/: AbstractFactory.h  Singleton.h
Pointers/: AutoPtr.h  Ptr.h  RefCounted.h  UniquePtr.h  WeakPtr.h
Preprocessor/: CplusplusFeatures.h  Debug.h  EnumClass.h  Platform.h  Preprocessor.h
Strings/: FixedString.h  FixedStringBuffer.h  StringView.h
TypeTraits/: Classes.h  NumericTraits.h  Type.h  TypeIndex.h  TypeName.h  TypeTraits.h
UnitTests/: CMakeLists.txt  Tests.cpp
math/: Bounds.h  Color.h  Config.h  Curve.h  DCEL.h  FixedPointNumber.h  FooMath.h  Graph.h  LinearRegression.h  Matrix.h  Matrix4.h  Mesh.h  Plane.h  Quat.h  Samples.h  Vec2.h  Vec3.h  Vec4.h  Vector.h
memory/: ArrayAllocator.h  AutoPtr.h  RefCounted.h  StrongPtr.h  WeakPtr.h
spatial/: KdTree.h
